fix: cms-block styling

--- a/src/Resources/app/storefront/src/scss/_elysium-block.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-block.scss
@@ -1,5 +1,6 @@
 .cms-block-container-row {
 
+    .cms-block-blur-elysium-banner-block &,
     .cms-block-blur-elysium-block-two-col & {
         margin: 0;
     }
