--- a/src/Resources/views/storefront/component/blur-elysium-slide/default/slide.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/default/slide.html.twig
@@ -24,7 +24,8 @@
                         '--bg-color': slideData.slideSettings.slide.bgColor,
                         '--gradient-color-start': slideData.slideSettings.slide.bgGradient.startColor,
                         '--gradient-color-end': slideData.slideSettings.slide.bgGradient.endColor,
-                        '--gradient-deg': slideData.slideSettings.slide.bgGradient.gradientDeg ? slideData.slideSettings.slide.bgGradient.gradientDeg ~ 'deg' : null
+                        '--gradient-deg': slideData.slideSettings.slide.bgGradient.gradientDeg ? slideData.slideSettings.slide.bgGradient.gradientDeg ~ 'deg' : null,
+                        '--slide-description-color': slideData.slideSettings.slide.description.color
                     },
                     slideViewportStyles: slideData.slideSettings.viewports
                 } %}
