--- a/src/Resources/views/storefront/component/blur-elysium-slide/includes/container.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/includes/container.html.twig
@@ -3,8 +3,7 @@
 
 {% block blur_elysium_slide_container %}
     {% set containerClasses = [
-        'blur-elysium-slide-container',
-        'd-grid',
+        'blur-elysium-slide-container'
     ] %}
 
     {% block blur_elysium_slide_container_element %}
