--- a/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.scss
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: minmax(0, 1fr) auto;
-    border: 2px solid #ffffff;
+    border: 2px solid #eeeeee;
     background-color: #ffffff;
     background-position: center;
     background-repeat: no-repeat;
