--- a/src/Resources/app/administration/src/component/blur-elysium-slide-settings-display-general/template.html.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-settings-display-general/template.html.twig
@@ -10,22 +10,38 @@
                 :title="$tc('blurElysiumSlides.slideSettings.display.slideAppearance.title')" 
                 :content="$tc('blurElysiumSlides.slideSettings.display.slideAppearance.description')" />
 
-            <sw-container columns="1fr 1fr 1fr 1fr" gap="0 1rem">
+            <sw-container 
+                columns="repeat(4, 1fr)" 
+                gap="24px"> 
+
                 <sw-number-field 
                     type="int"
                     :label="$tc('blurElysiumSlides.slideSettings.display.common.paddingX')"
                     :step="1"
                     :value="viewportSettings.slide.paddingX"
-                    @change="value => setViewportSetting({key:'slide.paddingX', value: value})"
-                />
+                    @change="value => setViewportSetting({key:'slide.paddingX', value: value})">
+
+                    <template #suffix>
+                        Px
+                    </template>
+                    <template #hint>
+                        <blur-elysium-device-hint />
+                    </template>
+                </sw-number-field>
 
                 <sw-number-field 
                     type="int"
                     :label="$tc('blurElysiumSlides.slideSettings.display.common.paddingY')"
                     :step="1"
                     :value="viewportSettings.slide.paddingY"
-                    @change="value => setViewportSetting({key:'slide.paddingY', value: value})"
-                />
+                    @change="value => setViewportSetting({key:'slide.paddingY', value: value})">
+                    <template #suffix>
+                        Px
+                    </template>
+                    <template #hint>
+                        <blur-elysium-device-hint />
+                    </template>
+                </sw-number-field>
 
                 <sw-number-field 
                     type="int"
@@ -33,8 +49,14 @@
                     placeholder="0"
                     :step="1"
                     :value="viewportSettings.slide.borderRadius"
-                    @change="value => setViewportSetting({key:'slide.borderRadius', value: value})"
-                />
+                    @change="value => setViewportSetting({key:'slide.borderRadius', value: value})">
+                    <template #suffix>
+                        Px
+                    </template>
+                    <template #hint>
+                        <blur-elysium-device-hint />
+                    </template>
+                </sw-number-field>
             </sw-container>
         </blur-card-section>
 
